--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -11,6 +11,7 @@ import Node from "@/icons/node.astro"
 import MySQL from "@/icons/sql.astro"
 import Git from "@/icons/git.astro"
 import GitHub from "@/icons/GitHub.astro"
+import GitLab from "@/icons/Gitlab.astro"
 import Tailwind from "@/icons/tailwind.astro"
 import Next from "@/icons/next.astro"
 import Swift from "@/icons/swift.astro"
@@ -28,6 +29,7 @@ const SKILLS_ICONS: Record<string, any> = {
   MySQL,
   Git,
   GitHub,
+  GitLab,
   Next,
   Tailwind,
   Swift,
