--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -5,12 +5,15 @@ import CSS from "@/icons/css.astro";
 import JavaScript from "@/icons/javascript.astro";
 import TypeScript from "@/icons/type.astro";
 import React from "@/icons/react.astro";
+import Vue from "@/icons/vue.astro";
 import Node from "@/icons/node.astro";
 import MySQL from "@/icons/sql.astro";
 import Git from "@/icons/git.astro";
 import GitHub from "@/icons/GitHub.astro";
 import Tailwind from "@/icons/tailwind.astro";
 import Next from "@/icons/next.astro";
+import Nuxt from "@/icons/nuxt.astro";
+import AstroIcon from "@/icons/astro.astro";
 import { skills } from "@cv";
 import Swift from "@/icons/swift.astro";
 import SwiftUI from "@/icons/swiftui.astro";
@@ -25,11 +28,14 @@ const SKILLS_ICONS: Record<string, any> = {
 	JavaScript,
 	TypeScript,
 	React,
+	Vue,
 	Node,
 	MySQL,
 	Git,
 	GitHub,
 	Next,
+	Nuxt,
+	AstroIcon,
 	Tailwind,
 	Swift,
 	SwiftUI,
@@ -44,7 +50,7 @@ const SKILLS_ICONS: Record<string, any> = {
 	<ul class="[&>li>svg]:text-skin-hue inline-flex flex-wrap gap-6 [&>li>svg]:size-5 [&>li]:text-sm">
 		{
 			skills.map(({ name }) => {
-				const iconName = name === "Next.js" ? "Next" : name;
+				const iconName = name === "Astro" ? "AstroIcon" : name;
 				const Icon = SKILLS_ICONS[iconName];
 
 				return (
