--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -7,6 +7,7 @@ import CSS from "@/icons/css.astro"
 import JavaScript from "@/icons/javascript.astro"
 import TypeScript from "@/icons/type.astro"
 import React from "@/icons/react.astro"
+import Vue from "@/icons/vue.astro"
 import Node from "@/icons/node.astro"
 import MySQL from "@/icons/sql.astro"
 import Git from "@/icons/git.astro"
@@ -14,6 +15,7 @@ import GitHub from "@/icons/GitHub.astro"
 import GitLab from "@/icons/Gitlab.astro"
 import Tailwind from "@/icons/tailwind.astro"
 import Next from "@/icons/next.astro"
+import Nuxt from "@/icons/nuxt.astro"
 import Swift from "@/icons/swift.astro"
 import SwiftUI from "@/icons/swiftui.astro"
 import Kotlin from "@/icons/kotlin.astro"
@@ -25,12 +27,14 @@ const SKILLS_ICONS: Record<string, any> = {
   JavaScript,
   TypeScript,
   React,
+  Vue,
   Node,
+  Next,
+  Nuxt,
   MySQL,
   Git,
   GitHub,
   GitLab,
-  Next,
   Tailwind,
   Swift,
   SwiftUI,
