--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -1,12 +1,16 @@
 ---
+import { skills } from "@cv";
 import Section from "../Section.astro";
 import HTML from "@/icons/html.astro";
 import CSS from "@/icons/css.astro";
 import JavaScript from "@/icons/javascript.astro";
+import Alpine from "@/icons/Alpine.astro";
 import TypeScript from "@/icons/type.astro";
 import React from "@/icons/react.astro";
 import Vue from "@/icons/vue.astro";
 import Node from "@/icons/node.astro";
+import Python from "@/icons/Python.astro";
+import Golang from "@/icons/Golang.astro";
 import MySQL from "@/icons/sql.astro";
 import Git from "@/icons/git.astro";
 import GitHub from "@/icons/GitHub.astro";
@@ -14,7 +18,6 @@ import Tailwind from "@/icons/tailwind.astro";
 import Next from "@/icons/next.astro";
 import Nuxt from "@/icons/nuxt.astro";
 import AstroIcon from "@/icons/astro.astro";
-import { skills } from "@cv";
 import Swift from "@/icons/swift.astro";
 import SwiftUI from "@/icons/swiftui.astro";
 import Kotlin from "@/icons/kotlin.astro";
@@ -23,42 +26,47 @@ import Figma from "@/icons/Figma.astro";
 import Gitlab from "@/icons/Gitlab.astro";
 
 const SKILLS_ICONS: Record<string, any> = {
-	HTML,
-	CSS,
-	JavaScript,
-	TypeScript,
-	React,
-	Vue,
-	Node,
-	MySQL,
-	Git,
-	GitHub,
-	Next,
-	Nuxt,
-	AstroIcon,
-	Tailwind,
-	Swift,
-	SwiftUI,
-	Kotlin,
-	Flutter,
-	Figma,
-	Gitlab,
+  HTML,
+  CSS,
+  JavaScript,
+  Alpine,
+  TypeScript,
+  React,
+  Vue,
+  Node,
+  Python,
+  Golang,
+  MySQL,
+  Git,
+  GitHub,
+  Next,
+  Nuxt,
+  AstroIcon,
+  Tailwind,
+  Swift,
+  SwiftUI,
+  Kotlin,
+  Flutter,
+  Figma,
+  Gitlab,
 };
 ---
 
 <Section className={Astro.props.className} title="Skills">
-	<ul class="[&>li>svg]:text-skin-hue inline-flex flex-wrap gap-6 [&>li>svg]:size-5 [&>li]:text-sm">
-		{
-			skills.map(({ name }) => {
-				const iconName = name === "Astro" ? "AstroIcon" : name;
-				const Icon = SKILLS_ICONS[iconName];
+  <ul
+    class="inline-flex flex-wrap gap-6 [&>li>svg]:size-5 [&>li>svg]:text-skin-hue [&>li]:text-sm"
+  >
+    {
+      skills.map(({ name }) => {
+        const iconName = name === "Astro" ? "AstroIcon" : name;
+        const Icon = SKILLS_ICONS[iconName];
 
-				return (
-					<li class="border-skin-hue/20s bg-skin-button-accent/20s borders border-solids flex items-center gap-1 rounded-md px-2 py-0.5 text-xs text-skin-muted print:border-none print:bg-transparent print:p-0 print:text-zinc-800">
-						{Icon && <Icon />} <span>{name}</span>
-					</li>
-				);
-			})
-		}
-	</ul>
+        return (
+          <li class="border-skin-hue/20s bg-skin-button-accent/20s borders border-solids flex items-center gap-1 rounded-md px-2 py-0.5 text-xs text-skin-muted print:border-none print:bg-transparent print:p-0 print:text-zinc-800">
+            {Icon && <Icon />} <span>{name}</span>
+          </li>
+        );
+      })
+    }
+  </ul>
 </Section>
